--- a/http/ks.cfg
+++ b/http/ks.cfg
@@ -11,10 +11,10 @@ text
 eula --agreed
 
 # Keyboard layouts
-keyboard --xlayouts='fr (oss)'
+keyboard us
 
 # System language
-lang fr_FR.UTF-8
+lang en_US.UTF-8
 
 # Network information
 network --device=ens33 --bootproto=dhcp --ipv6=auto --activate
@@ -32,10 +32,10 @@ clearpart --all --initlabel
 autopart --type=lvm
 
 # System timezone
-timezone Europe/Paris --utc
+timezone America/New_York --utc
 
 # Root password
-rootpw --plaintext --allow-ssh MotDePasse
+rootpw --plaintext --allow-ssh Packer2025
 
 # Firewall configuration
 firewall --enabled
