--- a/boot/ks.cfg
+++ b/boot/ks.cfg
@@ -17,7 +17,7 @@ keyboard us
 lang en_US.UTF-8
 
 # Network information
-network --device=ens33 --bootproto=dhcp --ipv6=auto --activate
+network --bootproto=dhcp --device=link --ipv6=auto
 
 # Initial Setup is not started the first time the system boots
 firstboot --disabled
@@ -38,7 +38,7 @@ timezone America/New_York --utc
 rootpw --plaintext --allow-ssh Packer2025
 
 # Firewall configuration
-firewall --enabled
+firewall --disabled
 
 # State of SELinux
 selinux --disabled
